Fixed a text-alignment issue on Mobile

--- a/src/containers/Layout/Layout.scss
+++ b/src/containers/Layout/Layout.scss
@@ -24,6 +24,7 @@
 
     h3 {
       margin: auto;
+      text-align: center;
     }
   }
 }
